--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #a3cef1;
-  background: repeating-linear-gradient(135deg, #fff 0, #fff 5%, #a3cef1 0, #a3cef1 50%) 0 / 10px 10px;
+  background: repeating-linear-gradient(135deg, #78848ee2 0, #78848ee2 5%, #a3cef1 0, #a3cef1 50%) 0 / 12px 12px;
   font-size: 18px;
 }
 
